objects/Productt__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>underprocess</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adidas</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Bajaj</fullName>
                </value>
                <value>
                    <fullName>Gucci</fullName>
                </value>
                <value>
                    <fullName>Havells</fullName>
                </value>
                <value>
                    <fullName>Nike</fullName>
                </value>
                <value>
                    <fullName>Oppo</fullName>
                </value>
                <value>
                    <fullName>Philips</fullName>
                </value>
                <value>
                    <fullName>Puma</fullName>
                </value>
                <value>
                    <fullName>Redmi</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Woodland</fullName>
                </value>
                <value>
                    <fullName>Zara</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apparrel</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Shoes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_of_Product__c</fullName>
        <label>Cost of Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adidas-1</fullName>
                </value>
                <value>
                    <fullName>Adidas-2</fullName>
                </value>
                <value>
                    <fullName>Apple-1</fullName>
                </value>
                <value>
                    <fullName>Apple-2</fullName>
                </value>
                <value>
                    <fullName>Bajaj-1</fullName>
                </value>
                <value>
                    <fullName>Bajaj-2</fullName>
                </value>
                <value>
                    <fullName>Gucci-1</fullName>
                </value>
                <value>
                    <fullName>Gucci-2</fullName>
                </value>
                <value>
                    <fullName>Havells-1</fullName>
                </value>
                <value>
                    <fullName>Havells-2</fullName>
                </value>
                <value>
                    <fullName>Nike-1</fullName>
                </value>
                <value>
                    <fullName>Nike-2</fullName>
                </value>
                <value>
                    <fullName>Oppo-1</fullName>
                </value>
                <value>
                    <fullName>Oppo-2</fullName>
                </value>
                <value>
                    <fullName>Philips-1</fullName>
                </value>
                <value>
                    <fullName>Philips-2</fullName>
                </value>
                <value>
                    <fullName>Puma-1</fullName>
                </value>
                <value>
                    <fullName>Puma-2</fullName>
                </value>
                <value>
                    <fullName>Redmi-1</fullName>
                </value>
                <value>
                    <fullName>Redmi-2</fullName>
                </value>
                <value>
                    <fullName>Samsung-1</fullName>
                </value>
                <value>
                    <fullName>Samsung-2</fullName>
                </value>
                <value>
                    <fullName>Zara-1</fullName>
                </value>
                <value>
                    <fullName>Zara-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Productt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Product_Management_Productt</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Management</label>
        <queue>Product_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Productt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duplicacy_should_be_restricted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
NOT( ISBLANK( VLOOKUP($ObjectType.Productt__c.Fields.Name,$ObjectType.Productt__c.Fields.Name, Name) ) )
)</errorConditionFormula>
        <errorMessage>No Duplicacy allowed</errorMessage>
    </validationRules>
</CustomObject>